작업중 커밋

--- a/recommend_season.html
+++ b/recommend_season.html
@@ -124,8 +124,9 @@
   <header class="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
     <div class="flex items-center justify-between px-4 py-3">
       <div class="flex items-center gap-2">
-        <a href="https://readdy.ai/home/0086bfe3-a951-4d32-95bd-f87c4fe866e1/121c183c-fd8c-4b74-afb5-ff594d9bad05"
-          data-readdy="true" class="w-8 h-8 flex items-center justify-center cursor-pointer">
+
+        <a href="#" onclick="event.preventDefault(); history.back();" data-readdy="true"
+          class="w-8 h-8 flex items-center justify-center cursor-pointer">
           <i class="ri-arrow-left-s-line text-xl"></i>
         </a>
         <h1 class="text-lg font-medium">계절별 추천 캠핑</h1>
