--- a/weather.html
+++ b/weather.html
@@ -49,7 +49,8 @@
 <body class="  min-h-[762px] mx-auto bg-gray-50">
   <header class="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
     <div class="flex items-center justify-between px-4 py-3">
-      <a href="./index.html" data-readdy="true" class="w-8 h-8 flex items-center justify-center cursor-pointer">
+      <a href="#" onclick="event.preventDefault(); history.back();"
+        class="w-8 h-8 flex items-center justify-center cursor-pointer">
         <i class="ri-arrow-left-line text-xl"></i>
       </a>
       <h1 class="text-lg font-medium">날씨 예측</h1>
