--- a/reservation.html
+++ b/reservation.html
@@ -80,7 +80,7 @@
   <!-- 네비게이션 바 -->
   <nav class="fixed top-0 left-0 right-0 bg-white z-50 shadow-sm">
     <div class="flex items-center px-4 h-16">
-      <a href="./index.html" data-readdy="true"
+      <a href="#" onclick="event.preventDefault(); history.back();" data-readdy="true"
         class="w-10 h-10 flex items-center justify-center cursor-pointer hover:bg-gray-50 rounded-full">
         <i class="ri-arrow-left-s-line text-xl"></i>
       </a>
@@ -574,126 +574,120 @@
   </div>
   <script id="calendarScript">
     document.addEventListener('DOMContentLoaded', function () {
+      const params = new URLSearchParams(window.location.search);
+      const inParam = params.get('checkIn');    // ex: "2025.07.25"
+      const outParam = params.get('checkOut');   // ex: "2025.07.26"
+
+      function parseYmd(s) {
+        if (!s) return null;
+        const [y, m, d] = s.split('.');
+        return new Date(+y, +m - 1, +d);
+      }
+
+      let selectedStartDate = parseYmd(inParam) || new Date(2025, 6, 8);
+      let selectedEndDate = parseYmd(outParam) || new Date(2025, 6, 9);
+
+      // DOM 요소
       const calendarDays = document.getElementById('calendar-days');
-      const currentMonthElement = document.getElementById('current-month');
-      const prevMonthButton = document.getElementById('prev-month');
-      const nextMonthButton = document.getElementById('next-month');
-      const checkInDateElement = document.getElementById('check-in-date');
-      const checkOutDateElement = document.getElementById('check-out-date');
-      const totalNightsElement = document.getElementById('total-nights');
-      let currentDate = new Date(2025, 6, 8); // 2025년 7월 8일
-      let selectedStartDate = new Date(2025, 6, 8);
-      let selectedEndDate = new Date(2025, 6, 9);
-      // 날짜 포맷 함수
+      const currentMonthEl = document.getElementById('current-month');
+      const prevMonthBtn = document.getElementById('prev-month');
+      const nextMonthBtn = document.getElementById('next-month');
+      const checkInDateEl = document.getElementById('check-in-date');
+      const checkOutDateEl = document.getElementById('check-out-date');
+      const totalNightsEl = document.getElementById('total-nights');
+
       function formatDate(date) {
         const days = ['일', '월', '화', '수', '목', '금', '토'];
-        const year = date.getFullYear();
-        const month = String(date.getMonth() + 1).padStart(2, '0');
-        const day = String(date.getDate()).padStart(2, '0');
-        const dayOfWeek = days[date.getDay()];
-        return `${year}.${month}.${day} (${dayOfWeek})`;
+        const y = date.getFullYear();
+        const m = String(date.getMonth() + 1).padStart(2, '0');
+        const d = String(date.getDate()).padStart(2, '0');
+        return `${y}.${m}.${d} (${days[date.getDay()]})`;
       }
-      // 캘린더 렌더링 함수
+
+      // 초기 화면 반영
+      checkInDateEl.textContent = formatDate(selectedStartDate);
+      checkOutDateEl.textContent = formatDate(selectedEndDate);
+      const initNights = Math.round((selectedEndDate - selectedStartDate) / (1000 * 60 * 60 * 24));
+      totalNightsEl.textContent = initNights;
+
+      // 달력 렌더링 함수
       function renderCalendar() {
-        const year = currentDate.getFullYear();
-        const month = currentDate.getMonth();
-        currentMonthElement.textContent = `${year}년 ${month + 1}월`;
-        // 해당 월의 첫 날과 마지막 날
+        calendarDays.innerHTML = '';
+        const year = selectedStartDate.getFullYear(); // 현재 보고 있는 달
+        const month = selectedStartDate.getMonth();
+        currentMonthEl.textContent = `${year}년 ${month + 1}월`;
+
         const firstDay = new Date(year, month, 1);
         const lastDay = new Date(year, month + 1, 0);
-        // 이전 달의 마지막 날들
-        const firstDayIndex = firstDay.getDay();
-        // 캘린더 초기화
-        calendarDays.innerHTML = '';
-        // 이전 달의 날짜들
-        for (let i = firstDayIndex; i > 0; i--) {
-          const prevDate = new Date(year, month, 1 - i);
-          const dayElement = document.createElement('div');
-          dayElement.className = 'calendar-day disabled';
-          dayElement.textContent = prevDate.getDate();
-          calendarDays.appendChild(dayElement);
+        const startIdx = firstDay.getDay();
+
+        // 이전 달 남은 칸
+        for (let i = 0; i < startIdx; i++) {
+          const el = document.createElement('div');
+          el.className = 'calendar-day disabled';
+          el.textContent = new Date(year, month, 1 - startIdx + i).getDate();
+          calendarDays.appendChild(el);
         }
-        // 현재 달의 날짜들
+        // 이번 달 날짜
+        const today = new Date(); today.setHours(0, 0, 0, 0);
         for (let i = 1; i <= lastDay.getDate(); i++) {
           const date = new Date(year, month, i);
-          const dayElement = document.createElement('div');
-          dayElement.className = 'calendar-day';
-          dayElement.textContent = i;
-          // 예약 불가능한 날짜 (과거 날짜)
-          if (date < new Date(2025, 6, 7)) {
-            dayElement.classList.add('disabled');
+          const el = document.createElement('div');
+          el.className = 'calendar-day';
+          el.textContent = i;
+          if (date < today) {
+            el.classList.add('disabled');
           } else {
-            // 선택된 날짜 범위 표시
+            // 범위 스타일
             if (date.getTime() === selectedStartDate.getTime()) {
-              dayElement.classList.add('selected');
-              if (selectedEndDate && selectedEndDate > selectedStartDate) {
-                dayElement.classList.add('range-start');
-              }
-            } else if (selectedEndDate && date.getTime() === selectedEndDate.getTime()) {
-              dayElement.classList.add('selected');
-              dayElement.classList.add('range-end');
-            } else if (selectedEndDate && date > selectedStartDate && date < selectedEndDate) {
-              dayElement.classList.add('range');
+              el.classList.add('selected');
             }
-            // 날짜 선택 이벤트
-            dayElement.addEventListener('click', function () {
-              if (dayElement.classList.contains('disabled')) return;
-              if (!selectedStartDate || (selectedStartDate && selectedEndDate) || date < selectedStartDate) {
-                // 새로운 선택 시작
+            if (selectedEndDate && date.getTime() === selectedEndDate.getTime()) {
+              el.classList.add('selected');
+            }
+            if (selectedEndDate && date > selectedStartDate && date < selectedEndDate) {
+              el.classList.add('in-range');
+            }
+            // 클릭 이벤트
+            el.addEventListener('click', () => {
+              if (date < today) return;
+              if (!selectedStartDate || (selectedStartDate && selectedEndDate)) {
                 selectedStartDate = date;
                 selectedEndDate = null;
-                checkInDateElement.textContent = formatDate(selectedStartDate);
-                checkOutDateElement.textContent = '선택해주세요';
-                totalNightsElement.textContent = '0';
+                checkInDateEl.textContent = formatDate(selectedStartDate);
+                checkOutDateEl.textContent = '선택해주세요';
+                totalNightsEl.textContent = '0';
               } else {
-                // 선택 종료
-                if (date.getTime() === selectedStartDate.getTime()) {
-                  // 같은 날짜 선택 시 하루 예약
-                  selectedEndDate = new Date(date);
-                  selectedEndDate.setDate(selectedEndDate.getDate() + 1);
-                } else if (date > selectedStartDate) {
+                if (date < selectedStartDate) {
+                  selectedEndDate = selectedStartDate;
+                  selectedStartDate = date;
+                } else {
                   selectedEndDate = date;
                 }
-                checkOutDateElement.textContent = formatDate(selectedEndDate);
-                // 숙박 일수 계산
+                checkInDateEl.textContent = formatDate(selectedStartDate);
+                checkOutDateEl.textContent = formatDate(selectedEndDate);
                 const nights = Math.round((selectedEndDate - selectedStartDate) / (1000 * 60 * 60 * 24));
-                totalNightsElement.textContent = nights;
-                // 가격 업데이트
-                updateTotalPrice();
+                totalNightsEl.textContent = nights;
               }
               renderCalendar();
             });
           }
-          calendarDays.appendChild(dayElement);
+          calendarDays.appendChild(el);
         }
-        // 다음 달의 시작 날짜들 (필요한 경우)
-        const lastDayIndex = lastDay.getDay();
-        if (lastDayIndex < 6) {
-          for (let i = 1; i <= 6 - lastDayIndex; i++) {
-            const nextDate = new Date(year, month + 1, i);
-            const dayElement = document.createElement('div');
-            dayElement.className = 'calendar-day disabled';
-            dayElement.textContent = nextDate.getDate();
-            calendarDays.appendChild(dayElement);
-          }
+        // 다음 달 빈 칸
+        const endIdx = lastDay.getDay();
+        for (let i = 1; i < 7 - endIdx; i++) {
+          const el = document.createElement('div');
+          el.className = 'calendar-day disabled';
+          el.textContent = i;
+          calendarDays.appendChild(el);
         }
       }
-      // 이전 달 버튼
-      prevMonthButton.addEventListener('click', function () {
-        currentDate.setMonth(currentDate.getMonth() - 1);
-        renderCalendar();
-      });
-      // 다음 달 버튼
-      nextMonthButton.addEventListener('click', function () {
-        currentDate.setMonth(currentDate.getMonth() + 1);
-        renderCalendar();
-      });
-      // 초기 캘린더 렌더링
+
+      prevMonthBtn.addEventListener('click', () => { selectedStartDate.setMonth(selectedStartDate.getMonth() - 1); renderCalendar(); });
+      nextMonthBtn.addEventListener('click', () => { selectedStartDate.setMonth(selectedStartDate.getMonth() + 1); renderCalendar(); });
+
       renderCalendar();
-      // 초기 날짜 표시
-      checkInDateElement.textContent = formatDate(selectedStartDate);
-      checkOutDateElement.textContent = formatDate(selectedEndDate);
-      totalNightsElement.textContent = '1';
     });
   </script>
   <script id="roomTypeSelector">
@@ -1077,6 +1071,40 @@
       };
       // 초기 가격 계산
       updateTotalPrice();
+    });
+  </script>
+  <script id="hydrateRoomData">
+    document.addEventListener('DOMContentLoaded', function () {
+      const params = new URLSearchParams(window.location.search);
+      const roomName = params.get('roomName');
+      const roomPrice = params.get('roomPrice');
+      const roomCapacity = params.get('roomCapacity');
+      const roomArea = params.get('roomArea');
+      const roomImg = params.get('roomImg');
+      // 1) 상단 요약 이미지 · 제목
+      const summaryImg = document.querySelector('section.mb-6 img');
+      const summaryTitle = document.querySelector('section.mb-6 h2');
+      if (roomImg) summaryImg.src = decodeURIComponent(roomImg);
+      if (roomName) summaryTitle.textContent = decodeURIComponent(roomName);
+      // 2) 선택된 객실 정보 영역
+      const selCard = document.querySelector('section.mb-8:nth-of-type(2) .bg-white');
+      if (!selCard) return;
+      const imgEl = selCard.querySelector('img');
+      const nameEl = selCard.querySelector('h4.font-medium');
+      const infoSpans = selCard.querySelectorAll('div.flex-wrap span');
+      const priceEl = selCard.querySelector('.text-primary.font-medium');
+      const hidden = selCard.querySelector('input[name="room-type"]');
+      if (roomImg) imgEl.src = decodeURIComponent(roomImg);
+      if (roomName) nameEl.textContent = decodeURIComponent(roomName);
+      if (roomArea && infoSpans[0]) infoSpans[0].textContent = `면적: ${decodeURIComponent(roomArea)}`;
+      if (roomCapacity && infoSpans[1]) infoSpans[1].textContent = decodeURIComponent(roomCapacity);
+      if (roomPrice) {
+        const num = Number(roomPrice);
+        priceEl.textContent = `₩${num.toLocaleString()} / 1박`;
+      }
+      if (params.get('roomId') && hidden) {
+        hidden.value = params.get('roomId');
+      }
     });
   </script>
 </body>
