--- a/shop_condition.html
+++ b/shop_condition.html
@@ -105,8 +105,7 @@
 <body class="bg-white   min-h-[762px]">
   <nav class="fixed top-0 left-0 right-0 bg-white z-50 shadow-sm">
     <div class="flex items-center px-4 h-16">
-      <a href="https://readdy.ai/home/0086bfe3-a951-4d32-95bd-f87c4fe866e1/c03b7cf9-cc3e-48bc-88fb-76cc2684524b"
-        data-readdy="true"
+      <a href="#" onclick="event.preventDefault(); history.back();" data-readdy="true"
         class="w-10 h-10 flex items-center justify-center cursor-pointer hover:bg-gray-50 rounded-full">
         <i class="ri-arrow-left-s-line text-xl"></i>
       </a>
