디자인, 링크등 수정 및 찜 페이지 추가가

--- a/login.html
+++ b/login.html
@@ -66,6 +66,16 @@
     .logo-3d:hover {
       transform: translateZ(20px) rotateX(10deg);
     }
+
+    /* 스크롤바 숨김 */
+    ::-webkit-scrollbar {
+      display: none;
+    }
+    
+    * {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
 </head>
 
