--- a/shop_condition.html
+++ b/shop_condition.html
@@ -99,6 +99,16 @@
       display: block;
       animation: fadeIn 0.3s ease-out forwards;
     }
+
+    /* 스크롤바 숨김 */
+    ::-webkit-scrollbar {
+      display: none;
+    }
+    
+    * {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
 </head>
 
