--- a/search.html
+++ b/search.html
@@ -62,6 +62,16 @@
       border: 4px solid #fff;
       box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
     }
+
+    /* 스크롤바 숨김 */
+    ::-webkit-scrollbar {
+      display: none;
+    }
+    
+    * {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
 </head>
 
