--- a/search_result.html
+++ b/search_result.html
@@ -39,6 +39,16 @@
     :where([class^="ri-"])::before {
       content: "\f3c2";
     }
+
+    /* 스크롤바 숨김 */
+    ::-webkit-scrollbar {
+      display: none;
+    }
+    
+    * {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
 </head>
 
@@ -53,7 +63,7 @@
       <div class="flex-1 flex justify-center">
         <h1 class="text-lg font-medium">가평 글램핑</h1>
       </div>
-      <a href="https://readdy.ai/home/0086bfe3-a951-4d32-95bd-f87c4fe866e1/f0337728-efa7-4fab-800c-adcdbba971c8"
+      <a href="./index.html"
         data-readdy="true"
         class="w-10 h-10 flex items-center justify-center cursor-pointer hover:bg-gray-50 rounded-full">
         <i class="ri-home-5-line text-xl"></i>
